--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Buscador de Editais - Início{% endblock %}
+{% block title %}Início{% endblock %}
 
 {% block content %}
 
