--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="mainNav">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %}" href="{% url 'home' %}">Início</a></li>
-                <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'quem_somos' %}active{% endif %}" href="#">Quem somos</a></li>
+                <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'quem_somos' %}active{% endif %}" href="{% url 'quem_somos' %}">Quem somos</a></li>
                 <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'plataforma' %}active{% endif %}" href="#">Nossa plataforma</a></li>
                 <li class="nav-item"><a href="#" class="btn btn-planos">Nossos Planos</a></li>
             </ul>
