--- a/templates/quem_somos.html
+++ b/templates/quem_somos.html
@@ -26,4 +26,19 @@
     <div class="spacer-lg"></div>
 </section>
 
+
+<section class="quem_somos_desafio-section">
+    <div class="spacer-lg"></div>
+    <div class="spacer-min"></div>
+    <div class="container">
+        <p class="text-justify">
+            Diante dos desafios enfrentados por organizações e indivíduos na busca por oportunidades de financiamento, idealizamos o <strong>Buscador de Editais</strong> – uma plataforma digital criada para transformar a forma como você encontra e acompanha editais.
+            <br><br>
+            Nosso propósito é democratizar o acesso à informação, promovendo uma ponte eficiente entre quem oferta e quem precisa de apoio para seus projetos. Acreditamos no poder da tecnologia para simplificar processos, otimizar tempo e gerar impacto positivo.
+        </p>
+    </div>
+    <div class="spacer-min"></div>
+    <div class="spacer-lg"></div>
+</section>
+
 {% endblock %}
