--- a/templates/quem_somos.html
+++ b/templates/quem_somos.html
@@ -34,7 +34,7 @@
         <p class="text-justify">
             Diante dos desafios enfrentados por organizações e indivíduos na busca por oportunidades de financiamento, idealizamos o <strong>Buscador de Editais</strong> – uma plataforma digital criada para transformar a forma como você encontra e acompanha editais.
             <br><br>
-            Nosso propósito é democratizar o acesso à informação, promovendo uma ponte eficiente entre quem oferta e quem precisa de apoio para seus projetos. Acreditamos no poder da tecnologia para simplificar processos, otimizar tempo e gerar impacto positivo.
+            Nosso propósito é <strong> democratizar o acesso à informação </strong>, promovendo uma ponte eficiente entre quem oferta e quem precisa de apoio para seus projetos. Acreditamos no poder da tecnologia para simplificar processos, otimizar tempo e gerar impacto positivo.
         </p>
     </div>
     <div class="spacer-min"></div>
