--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_quem_somos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_nossa_plataforma.css' %}">
     
     <link rel="icon" type="image/png" href="{% static 'img/Favcon.png' %}">
 
