ALINHAMENTO NOSSA PLATAFORMA

--- a/templates/nossa_plataforma.html
+++ b/templates/nossa_plataforma.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 
+
 <section class="nossa_plataforma-section py-5">
     <div class="spacer-lg"></div>
     <div class="spacer-min"></div>
@@ -42,7 +43,7 @@
                     <div class="features-list">
                         <div class="feature-item">
                             <div class="icon"><i class="fas fa-robot"></i></div>
-                            <div>
+                            <div class="text-content">
                                 <h4>Busca Inteligente de Editais com IA</h4>
                                 <p>Utilizamos modelos de Inteligência Artificial para analisar automaticamente os editais, extrair os pontos mais relevantes e apresentar resumos claros e objetivos. Isso permite que você tome decisões mais rápidas e assertivas, sem precisar ler dezenas de páginas.</p>
                             </div>
@@ -50,7 +51,7 @@
 
                         <div class="feature-item">
                             <div class="icon"><i class="fas fa-bell"></i></div>
-                            <div>
+                            <div class="text-content">
                                 <h4>Monitoramento de Fontes</h4>
                                 <p>Ative alertas para ser notificado sempre que uma nova oportunidade for publicada.</p>
                             </div>
@@ -58,7 +59,7 @@
 
                         <div class="feature-item">
                             <div class="icon"><i class="fas fa-tasks"></i></div>
-                            <div>
+                            <div class="text-content">
                                 <h4>Acompanhamento de Editais</h4>
                                 <p>Receba lembretes automáticos quando um edital estiver próximo do prazo final ou sofrer alguma alteração.</p>
                             </div>
@@ -66,7 +67,7 @@
 
                         <div class="feature-item">
                             <div class="icon"><i class="fas fa-handshake"></i></div>
-                            <div>
+                            <div class="text-content">
                                 <h4>Banco de Empreendedores e Pesquisadores</h4>
                                 <p>Conecte-se com outras pessoas e instituições em busca de apoio e parcerias.</p>
                             </div>
@@ -74,7 +75,7 @@
 
                         <div class="feature-item">
                             <div class="icon"><i class="fas fa-clipboard-check"></i></div>
-                            <div>
+                            <div class="text-content">
                                 <h4>Planos Acessíveis e Teste Gratuito</h4>
                                 <p>Tenha acesso gratuito por 7 dias e descubra como a plataforma pode potencializar sua captação de recursos.</p>
                             </div>
