--- a/static/css/style_nossa_plataforma.css
+++ b/static/css/style_nossa_plataforma.css
@@ -36,7 +36,18 @@
 .feature-item .icon {
     font-size: 2rem;
     color: #F8C000;
-    margin-top: 5px;
+    min-width: 30px;
+    margin-top: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 40px;
+}
+
+.feature-item .text-content {
+    flex: 1;
+    text-align: left;
+    max-width: 100%;
 }
 
 .feature-item h4 {
@@ -44,14 +55,15 @@
     font-size: 2rem;
     color: #ffffff;
     margin-bottom: 5px;
-    text-align: left; /* <<-- ADICIONE ESTA LINHA PARA CORRIGIR */
+    text-align: left;
 }
 
 .feature-item p {
     color: #d0d0d0;
-    text-align: left; /* Esta linha já estava correta */
+    text-align: left;
     margin-left: 0;
     font-size: 1.2rem;
+    margin-bottom: 0;
 }
 
 .testimonials-section {
