--- a/templates/nossa_plataforma.html
+++ b/templates/nossa_plataforma.html
@@ -92,30 +92,25 @@
         <div class="row">
             <div class="col-lg-6 mb-4 mb-lg-0">
                 <div class="testimonial-card">
-                    <p class="testimonial-quote">
-                        "Economizei horas de trabalho com o Buscador de Editais. Agora, recebo alertas automáticos e foco no que realmente importa: escrever bons projetos."
-                    </p>
-                    <div class="testimonial-author">
-                        <img src="https://i.imgur.com/gS1yT2e.png" alt="Foto de Lariana Faria"> 
-                        <div class="author-info">
-                            <strong>Lariana Faria</strong>
-                            <span>Pesquisadora</span>
-                        </div>
+                    <img src="https://i.imgur.com/gS1yT2e.png" alt="Foto de Lariana Faria" class="testimonial-author-img"> 
+                    <div class="testimonial-text-content">
+                        <p class="testimonial-quote">
+                            “Economizei horas de trabalho com o Buscador de Editais. Agora, recebo alertas automáticos e foco no que realmente importa: escrever bons projetos.”
+                        </p>
+                        <p class="testimonial-author-name"><strong>Lariana Faria</strong>, Pesquisadora</p>
                     </div>
                 </div>
+
+                </div>
             </div>
-            
             <div class="col-lg-6">
                 <div class="testimonial-card">
-                    <p class="testimonial-quote">
-                        "É como ter uma equipe de monitoramento 24h. Recomendo para toda organização que quer fechar os elos com mais eficiência."
-                    </p>
-                    <div class="testimonial-author">
-                        <img src="https://i.imgur.com/A4SNmCg.png" alt="Foto de Carlos Magno">
-                        <div class="author-info">
-                            <strong>Carlos Magno</strong>
-                            <span>CEO da Otimiza</span>
-                        </div>
+                    <img src="https://i.imgur.com/gS1yT2e.png" alt="Foto de Lariana Faria" class="testimonial-author-img"> 
+                    <div class="testimonial-text-content">
+                        <p class="testimonial-quote">
+                            “Economizei horas de trabalho com o Buscador de Editais. Agora, recebo alertas automáticos e foco no que realmente importa: escrever bons projetos.”
+                        </p>
+                        <p class="testimonial-author-name"><strong>Carlos Magno</strong>, CEO da Otimiza</p>
                     </div>
                 </div>
             </div>
