--- a/templates/nossa_plataforma.html
+++ b/templates/nossa_plataforma.html
@@ -89,32 +89,30 @@
 </section>
 <section class="testimonials-section">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 mb-4 mb-lg-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6 mb-5 mb-lg-0">
                 <div class="testimonial-card">
-                    <img src="https://i.imgur.com/gS1yT2e.png" alt="Foto de Lariana Faria" class="testimonial-author-img"> 
-                    <div class="testimonial-text-content">
-                        <p class="testimonial-quote">
-                            “Economizei horas de trabalho com o Buscador de Editais. Agora, recebo alertas automáticos e foco no que realmente importa: escrever bons projetos.”
-                        </p>
-                        <p class="testimonial-author-name"><strong>Lariana Faria</strong>, Pesquisadora</p>
-                    </div>
-                </div>
-
+                    <img src="{% static 'img/mulher.jpeg' %}" alt="Foto de Leticia Silva" class="testimonial-img">
+                    
+                    <p class="testimonial-quote">
+                        "Economizei horas de trabalho com o Buscador de Editais. Agora, recebo alertas automáticos e foco no que realmente importa: escrever bons projetos."
+                        <span class="testimonial-author"><strong>- Leticia Silva</strong>, pesquisadora</span>
+                    </p>
                 </div>
             </div>
+
             <div class="col-lg-6">
                 <div class="testimonial-card">
-                    <img src="https://i.imgur.com/gS1yT2e.png" alt="Foto de Lariana Faria" class="testimonial-author-img"> 
-                    <div class="testimonial-text-content">
-                        <p class="testimonial-quote">
-                            “Economizei horas de trabalho com o Buscador de Editais. Agora, recebo alertas automáticos e foco no que realmente importa: escrever bons projetos.”
-                        </p>
-                        <p class="testimonial-author-name"><strong>Carlos Magno</strong>, CEO da Otimiza</p>
-                    </div>
+                    <img src="{% static 'img/homem.jpg' %}" alt="Foto de Carlos Mendes" class="testimonial-img">
+
+                    <p class="testimonial-quote">
+                        "É como ter uma equipe de monitoramento 24h. Recomendo para toda organização que quer captar recursos com mais eficiência."
+                        <span class="testimonial-author"><strong>- Carlos Mendes</strong>, ONG EcoVida</span>
+                    </p>
                 </div>
             </div>
         </div>
+
         <div class="carousel-dots">
             <span class="dot active"></span>
             <span class="dot"></span>
